# redisSerachQualityTools

./: painPoints.txt
bookStore/: README.md  bookHashPopulator.py  bookJsonPopulator.py  installRedisOss.sh  queryStresser.py  queryStresserMOD-15364.py
bookStore/flash/: bookHashPopulator.py  bookHashPopulatorAll.py  complexQueryStressTester.py  hybrid_lab_setup.sh  hybrid_lab_setup1.sh  queryGenerator.py  releaseQueryStressHarness.py
bookStore/flash/old/: bookHashPopulatorDEL.py  bookHashPopulatorHFE.py  bookHashPopulatorHSETEX.py
bookStore/flash/reports/: release-stress-report-complex-rerun.json  release-stress-report-complex.json  release-stress-report-max-complex-v2.json  release-stress-report-max-complex-v3.json  release-stress-report-max-complex-v4.json  release-stress-report-max-complex.json  release-stress-report-rerun.json  release-stress-report.json  (+2 more)
bookStore/searchQueries/: chatGPTbatch.txt  chatgptSearchBatch.txt  cursorQueryGeneratorWithGeo.py  cursorQueryGeneratorWithoutGeo.py  cursorSearchQueryBatch.txt  queryGeneratorDynamic.py  run_search_queries.sh
redis-fuzz-search/: .gitignore  .gitmodules  Cargo.toml  Makefile  NOTES  README.md  TODO  defconfig.json  install.sh  minimize.py  netfuzz.py  rebloom.c.patch  run  triage.py
redis-fuzz-search/src/: Makefile  gen.py  harness.c  harness.h  hashtable.c  lib.rs  mutator.rs  print.mk  replay.c  replay.rs  smith.rs  stub.c
redis-search-trafficgen/: .gitignore  Makefile  README.md  SPEC.md  go.mod  go.sum
redis-search-trafficgen/scenarios/: heavy.yaml  load.yaml  smoke.yaml  smoke_flex.yaml
(+34 files in other folders)
