[package]
name = "redis-fuzz"
version = "0.1.0"
authors = ["Enzo Saracen <enzosaracen@gmail.com>"]
edition = "2024"

[features]
default = ["tui"]
tui = []

[dependencies]
libafl = { path = "./LibAFL/crates/libafl", features = ["tui_monitor"] }
libafl_bolts = { path = "./LibAFL/crates/libafl_bolts"}
libafl_targets = { path = "./LibAFL/crates/libafl_targets", features = ["sancov_pcguard_edges", "pointer_maps"] }
libafl_cc = { path = "./LibAFL/crates/libafl_cc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
rand = "0.8"
postcard = "1.1"
anyhow = "1"
mimalloc = { version = "0.1", default-features = false }

[build-dependencies]
cc = { version = "1.1.21", features = ["parallel"] }

[lib]
name = "redisfuzz"
crate-type = ["staticlib"]
